--- a/NubeBooks/Views/Admin/Items.cshtml
+++ b/NubeBooks/Views/Admin/Items.cshtml
@@ -48,7 +48,7 @@
                         <th class="text-center">Nombre</th>
                         <th class="text-center">Código</th>
                         <th class="text-center">Descripción</th>
-                        <th class="text-center">U. Medida</th>
+                        <th class="text-center">Unid. Medida</th>
                         <th class="text-center">Precio</th>
                         <th class="text-center">Estado</th>
                         <th style="width:8%"></th>
@@ -64,7 +64,7 @@
                                 <td class="text-center">@item.Codigo</td>
                                 <td class="text-center">@item.Descripcion</td>
                                 <td class="text-center">@item.UnidadMedida</td>
-                                <td class="text-right">@item.simboloMoneda @item.Precio.GetValueOrDefault().ToString("N2", CultureInfo.InvariantCulture)</td>
+                                <td class="text-right">@item.simboloMoneda @(item.Precio.GetValueOrDefault().ToString("N2", CultureInfo.InvariantCulture))</td>
                                 @{ var eColor = item.Estado ? "#27c24c" : "red"; }
                                 <td class="text-center" style="color:@(eColor)">@(item.Estado ? "Activo" : "Inactivo" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
