Etiqueta de correo

--- a/NubeBooks/Views/Admin/Entidad.cshtml
+++ b/NubeBooks/Views/Admin/Entidad.cshtml
@@ -332,7 +332,7 @@ else { cadena = "Actualizar"; }
                     <thead>
                         <tr>
                             <th width="15%">Nombre</th>
-                            <th class="text-center">Email</th>
+                            <th class="text-center">Correo Electrónico</th>
                             <th class="text-center">Cargo</th>
                             <th class="text-center">Teléfono</th>
                             <th class="text-center">Celular</th>
