ajustes de cartera morosa

--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -404,7 +404,7 @@
                                     </ul>
                                 </li>
                             }
-                            @*<li class="line dk hidden-folded"></li>
+                            <li class="line dk hidden-folded"></li>
                             <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
                                 <span>Archivos</span>
                             </li>
@@ -413,7 +413,7 @@
                                     <i class="fa fa-file"></i>
                                     <span>Proformas Area</span>
                                 </a>
-                            </li>*@
+                            </li>
                         </ul>
                     </nav>
                     <!-- nav -->
