--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -411,7 +411,13 @@
                             <li>
                                 <a href="@Url.Action("Index", "Proforma",new { Area="Proformas"})">
                                     <i class="fa fa-file"></i>
-                                    <span>Proformas Area</span>
+                                    <span>Proformas</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "Proformas",new { Area="Proformas"})">
+                                    <i class="fa fa-file"></i>
+                                    <span>Proformas Admin</span>
                                 </a>
                             </li>
                         </ul>
